- CAMBIOS EN SEGURIDAD Y AUTENTICACION.

--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -7,7 +7,7 @@
       <mat-card-content class="">
         <h2>Ingresar</h2>
 
-        <mat-form-field appearance="outline" class="">
+        <mat-form-field appearance="outline">
           <mat-label>Correo electrónico</mat-label>
           <input formControlName="email" matInput placeholder="correo@correo.com" type="email">
           <mat-icon matPrefix>email</mat-icon>
@@ -19,7 +19,7 @@
           }
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="">
+        <mat-form-field appearance="outline">
           <mat-label>Contraseña</mat-label>
           <input matInput formControlName="password" type="password">
           <mat-icon matPrefix>lock_outline</mat-icon>
