- INTEGRACION CON SERVICIOS TASKS. - MAQUETADO DE PANTALLA.

--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="layout">
+<div class="layout-login">
   <span class="shape shape-one"></span>
   <span class="shape shape-two"></span>
 
