--- a/src/general-style/general-style.scss
+++ b/src/general-style/general-style.scss
@@ -1,4 +1,5 @@
-@import './layout.scss';
-@import './buttons.scss';
+@import './layout';
+@import './buttons';
 @import './form-field';
 @import './general';
+@import './nav-bar';
