--- a/src/general-style/variables.scss
+++ b/src/general-style/variables.scss
@@ -1,1 +1,14 @@
 $primary-color: #FE6600;
+
+$red-50-900: #B71C1C;
+$red-50-400: #EF5350;
+$red-50-100: #FFCDD2;
+
+$blue-50-900: #0D47A1;
+$blue-50-600: #1565C0;
+$blue-50: #E3F2FD;
+
+$blue-gray-50-900: #263238;
+$blue-gray-50-800: #37474F;
+$blue-gray-50-700: #455A64;
+$blue-gray-50-600: #546E7A;
