--- a/src/general-style/buttons.scss
+++ b/src/general-style/buttons.scss
@@ -3,3 +3,15 @@
 .mat-mdc-unelevated-button:not(:disabled) {
   background-color: $primary-color !important;
 }
+
+.btn-add {
+  position: absolute !important;
+  right: 3rem;
+  bottom: 1rem;
+  border-radius: 100px !important;
+  background-color: $primary-color !important;
+
+  .mat-icon {
+    color: white !important;
+  }
+}
