--- a/src/app/operation/tasks/tasks.component.scss
+++ b/src/app/operation/tasks/tasks.component.scss
@@ -1,4 +1,5 @@
 @import "../../../general-style/variables";
+@import "../../../general-style/mixins/break-points";
 
 .tasks-component {
   .mat-mdc-card {
@@ -8,12 +9,44 @@
         overflow-y: auto;
         overflow-x: hidden;
       }
+
+      min-height: 50vh;
+
+      .empty-list {
+        text-align: center;
+
+        ~ p {
+          text-align: center;
+          font-size: .8rem;
+          color: grey;
+        }
+      }
     }
   }
 
   .list-tasks {
-    width: 42vw;
     margin: auto;
+    width: 90vw;
+
+    @include break-point(lg) {
+      width: 72vw;
+    }
+
+    @include break-point(md) {
+      width: 72vw;
+    }
+
+    @include break-point(sm) {
+      width: 90vw;
+    }
+
+    @include break-point(xs) {
+      width: 92vw;
+    }
+
+    @include break-point(xl) {
+      width: 42vw;
+    }
 
     .mat-mdc-list {
       padding-bottom: 0;
@@ -22,15 +55,19 @@
         padding-left: .3rem;
         padding-right: .3rem;
 
+        @include break-point(sm) {
+          height: auto;
+        }
+
         .mdc-list-item__content {
           .mat-mdc-list-item-title,
-          .mat-mdc-list-item-unscoped-content > .mat-mdc-list-item__description {
+          .mat-mdc-list-item__description {
             display: flex;
-            align-items: center;
           }
 
           .mat-mdc-list-item-title {
             cursor: pointer;
+            align-items: center;
 
             .title {
               max-width: 60%;
@@ -60,29 +97,54 @@
           }
 
           .mat-mdc-list-item__description {
-            > span {
-              padding-left: 2.5rem;
-              width: calc(100% - (50px + 2.5rem));
-              color: $blue-gray-50-600;
+            align-items: flex-start;
+
+            @include break-point(sm) {
+              display: flow-root;
+              width: 100%;
             }
 
-            .btn-delete {
-              background-color: $red-50-100;
-              color: $red-50-900;
+            > span {
+              padding-left: 2.5rem;
+              width: calc(100% - (150px + 2.5rem));
+              color: $blue-gray-50-600;
+              overflow-wrap: break-word;
 
-              &:hover {
-                background-color: $red-50-400;
-                color: white;
+              @include break-point(sm) {
+                padding-left: 1.5rem;
+                display: block;
+                width: 100%;
+                margin-bottom: .5rem;
               }
             }
 
-            .btn-edit {
-              background-color: $blue-50;
-              color: $blue-50-900;
+            .mat-mdc-list-item__btn-container {
+              width: 150px;
+              display: flex;
+              align-items: center;
 
-              &:hover {
-                background-color: $blue-50-600;
-                color: white;
+              @include break-point(sm) {
+                width: 100%;
+              }
+
+              .btn-delete {
+                background-color: $red-50-100;
+                color: $red-50-900;
+
+                &:hover {
+                  background-color: $red-50-400;
+                  color: white;
+                }
+              }
+
+              .btn-edit {
+                background-color: $blue-50;
+                color: $blue-50-900;
+
+                &:hover {
+                  background-color: $blue-50-600;
+                  color: white;
+                }
               }
             }
           }
