--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -21,9 +21,9 @@
 
         <mat-form-field appearance="outline">
           <mat-label>Contraseña</mat-label>
-          <input matInput formControlName="password" type="password">
+          <input matInput formControlName="password" [type]="isPasswordHide ? 'password' : 'text'">
           <mat-icon matPrefix>lock_outline</mat-icon>
-          <mat-icon matSuffix>visibility</mat-icon>
+          <mat-icon matSuffix (click)="isPasswordHide = !isPasswordHide">visibility</mat-icon>
 
           @if (form.get('password')?.errors) {
             <mat-error>
