- CAMBIOS DE ESTILO

--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -4,7 +4,8 @@
 
   <mat-card class="login-card pt-4 pr-5 pb-4 pl-5">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-card-content class="">
+      <mat-card-content>
+        <div class="logo"></div>
         <h2>Ingresar</h2>
 
         <mat-form-field appearance="outline">
