--- a/src/app/security/login/login.component.scss
+++ b/src/app/security/login/login.component.scss
@@ -1,6 +1,8 @@
 @use '@angular/material' as mat;
 @import '../../../general-style/mixins/break-points';
 
+
+
 .shape {
   position: fixed;
 
@@ -12,6 +14,14 @@
     left: 36vw;
     transform: rotate(40deg);
     top: 32vh;
+
+    @include break-point(md) {
+      left: 20vw;
+    }
+
+    @include break-point(sm) {
+      left: 0;
+    }
   }
 
   &.shape-two {
@@ -22,6 +32,12 @@
     left: 44vw;
     transform: rotate(25deg);
     top: 23vh;
+
+    @include break-point(md) {
+      width: 400px;
+      height: 400px;
+      top: 12vh;
+    }
   }
 }
 
@@ -59,5 +75,14 @@
 
   .mat-mdc-unelevated-button {
     width: 100%;
+  }
+
+  .logo {
+    background: url("/assets/favicon.png") no-repeat center center;
+    background-size: cover;
+    height: 60px;
+    width: 60px;
+    border-radius: 100px;
+    margin: auto;
   }
 }
